css/about.css
.about {
    margin: 40px;
}

.title {
    text-align: center;
    margin: 30px 0px;
}

.email-btn {
    background-color: var(--orange);
    color: white;
    border: none;
    width: 50px;
    height: 20px;
}

.sign-up {
    text-align: center;
}

p {
    width: 80%;
    margin: auto;
}


@media (min-width: 1024px) {

    .about {
        margin: 150px 200px;
        height: 80vh;
    }

    #footer {
        height: 100%;
    }
}

